[package]
name = "pi_spatialtree"
version = "0.4.0"
authors = ["yineng <dev@dev.com>"]
edition = "2021"
description = "sparial octtree quadtree"
repository = "https://github.com/GaiaWorld/pi_sparialtree"
license = "MIT OR Apache-2.0"
keywords = ["pi", "Sparial", "Tree"]

[dependencies]
parry2d = "0.13"
parry3d = "0.13"
nalgebra = "0.32"
num-traits = "0.2"
pi_slotmap="0.1"
pi_null = "0.1"

[dev-dependencies]
pcg_rand = "0.13"
rand = "0.8"