[package]
name = "pi_spatial"
version = "0.4.2"
authors = ["yineng <dev@dev.com>"]
edition = "2021"
description = "sparial octtree quadtree"
repository = "https://github.com/GaiaWorld/pi_spatial"
license = "MIT OR Apache-2.0"
keywords = ["pi", "spatial", "partition"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
parry2d = "0.13"
parry3d = "0.13"
nalgebra = "0.32"
num-traits = "0.2"
pi_slotmap="0.1"
pi_null = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
pcg_rand = "0.13"
rand = "0.8"